--- a/src/style.css
+++ b/src/style.css
@@ -1,7 +1,7 @@
 /* CSS Custom Properties Definitions */
 
 :root {
-  --maxWidth-none: "none";
+  --maxWidth-none: 'none';
   --maxWidth-xs: 20rem;
   --maxWidth-sm: 24rem;
   --maxWidth-md: 28rem;
@@ -10,9 +10,9 @@
   --maxWidth-2xl: 42rem;
   --maxWidth-3xl: 48rem;
   --maxWidth-4xl: 56rem;
-  --maxWidth-full: "100%";
+  --maxWidth-full: '100%';
   --maxWidth-wrapper: var(--maxWidth-2xl);
-  --spacing-px: "1px";
+  --spacing-px: '1px';
   --spacing-0: 0;
   --spacing-1: 0.25rem;
   --spacing-2: 0.5rem;
@@ -28,9 +28,9 @@
   --spacing-24: 6rem;
   --spacing-32: 8rem;
   --fontFamily-sans: Montserrat, system-ui, -apple-system, BlinkMacSystemFont,
-    "Segoe UI", Roboto, "Helvetica Neue", Arial, "Noto Sans", sans-serif,
-    "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
-  --fontFamily-serif: "Merriweather", "Georgia", Cambria, "Times New Roman",
+    'Segoe UI', Roboto, 'Helvetica Neue', Arial, 'Noto Sans', sans-serif,
+    'Apple Color Emoji', 'Segoe UI Emoji', 'Segoe UI Symbol', 'Noto Color Emoji';
+  --fontFamily-serif: 'Merriweather', 'Georgia', Cambria, 'Times New Roman',
     Times, serif;
   --font-body: var(--fontFamily-serif);
   --font-heading: var(--fontFamily-sans);
@@ -85,6 +85,11 @@ body {
 
 footer {
   padding: var(--spacing-6) var(--spacing-0);
+  font-size: var(--fontSize-0);
+}
+
+footer a {
+  text-decoration: none;
 }
 
 hr {
@@ -246,8 +251,8 @@ a:focus {
   padding: var(--spacing-10) var(--spacing-5);
 }
 
-.global-wrapper[data-is-root-path="true"] .bio {
-  margin-bottom: var(--spacing-20);
+.global-wrapper[data-is-root-path='true'] .bio {
+  margin-bottom: var(--spacing-12);
 }
 
 .global-header {
@@ -255,8 +260,13 @@ a:focus {
 }
 
 .main-heading {
-  font-size: var(--fontSize-7);
+  font-size: var(--fontSize-6);
+  font-weight: 700;
   margin: 0;
+}
+
+.no-blog-post {
+  padding: 20px 0 10px;
 }
 
 .post-list-item {
@@ -265,7 +275,7 @@ a:focus {
 }
 
 .post-list-item p {
-  margin-bottom: var(--spacing-0);
+  margin-bottom: var(--spacing-4);
 }
 
 .post-list-item h2 {
@@ -273,6 +283,16 @@ a:focus {
   color: var(--color-primary);
   margin-bottom: var(--spacing-2);
   margin-top: var(--spacing-0);
+}
+
+.post-list-item h2 span {
+  position: relative;
+}
+
+.post-list-item h2 span[data-external='true']::before {
+  position: absolute;
+  content: '🔗';
+  left: -2.1rem;
 }
 
 .post-list-item header {
@@ -288,7 +308,7 @@ a:focus {
 
 .bio {
   display: flex;
-  margin-bottom: var(--spacing-16);
+  margin-bottom: var(--spacing-6);
 }
 
 .bio p {
@@ -317,6 +337,33 @@ a:focus {
 
 .gatsby-highlight {
   margin-bottom: var(--spacing-8);
+}
+
+/* Search Box */
+
+.search-box {
+  position: relative;
+  display: flex;
+  align-items: center;
+  border: 1px solid black;
+  border-radius: 6px;
+  padding: 2px;
+}
+
+.search-box:focus-within {
+  outline: -webkit-focus-ring-color auto 1px;
+}
+
+.search-box input {
+  padding: 6px;
+  border: 0;
+  outline: none;
+  width: 100%;
+}
+
+.search-box span {
+  position: absolute;
+  right: 10px;
 }
 
 /* Media queries */
