--- a/src/style.css
+++ b/src/style.css
@@ -269,9 +269,21 @@ a:focus {
   padding: 20px 0 10px;
 }
 
+.post-link {
+  text-decoration: none;
+}
+
 .post-list-item {
-  margin-bottom: var(--spacing-8);
-  margin-top: var(--spacing-8);
+  border: 1px solid transparent;
+  border-radius: 10px;
+  padding: var(--spacing-4);
+  color: #555;
+  transition: all 0.25s ease;
+}
+
+.post-list-item:hover {
+  border: 1px solid var(--color-primary);
+  color: var(--color-primary);
 }
 
 .post-list-item p {
@@ -280,28 +292,13 @@ a:focus {
 
 .post-list-item h2 {
   font-size: var(--fontSize-4);
-  color: var(--color-primary);
+  color: inherit;
   margin-bottom: var(--spacing-2);
   margin-top: var(--spacing-0);
 }
 
-.post-list-item h2 a {
-  display: inline-block;
-  transition: all 0.2s;
-}
-
-.post-list-item h2 a:hover {
-  transform: translateY(-3px);
-}
-
 .post-list-item h2 span {
   position: relative;
-}
-
-.post-list-item h2 span[data-external='true']::before {
-  position: absolute;
-  content: '🔗';
-  left: -2.1rem;
 }
 
 .post-list-item header {
