update home page
* add post's background color
* fix react hooks

--- a/src/style.css
+++ b/src/style.css
@@ -284,6 +284,7 @@ a:focus {
 .post-list-item:hover {
   border: 1px solid var(--color-primary);
   color: var(--color-primary);
+  background-color: #f0f4f7;
 }
 
 .post-list-item p {
