--- a/src/style.css
+++ b/src/style.css
@@ -355,6 +355,7 @@ a:focus {
   border: 1px solid black;
   border-radius: 6px;
   padding: 2px;
+  background: white;
 }
 
 .search-box:focus-within {
