--- a/src/style.css
+++ b/src/style.css
@@ -54,11 +54,12 @@
   --fontSize-5: 2.074rem;
   --fontSize-6: 2.488rem;
   --fontSize-7: 2.986rem;
-  --color-primary: #005b99;
+  --color-primary: #6f5f90;
+  --color-secondary: #758eb7;
   --color-text: #2e353f;
-  --color-text-light: #4f5969;
-  --color-heading: #1a202c;
-  --color-heading-black: black;
+  --color-text-light: #4d525c;
+  --color-heading: #2b2f35;
+  --color-heading-black: #5f517b;
   --color-accent: #d1dce5;
 }
 
@@ -149,7 +150,6 @@ h6 {
 }
 
 h1 > a {
-  color: inherit;
   text-decoration: none;
 }
 
@@ -232,6 +232,15 @@ table thead tr th {
   border-bottom: 1px solid var(--color-accent);
 }
 
+button {
+  background-image: linear-gradient(
+    to bottom right,
+    var(--color-primary),
+    var(--color-secondary)
+  );
+  color: white;
+}
+
 /* Link */
 
 a {
@@ -277,14 +286,14 @@ a:focus {
   border: 1px solid transparent;
   border-radius: 10px;
   padding: var(--spacing-4);
-  color: #555;
+  color: var(--color-text-light);
   transition: all 0.25s ease;
 }
 
 .post-list-item:hover {
   border: 1px solid var(--color-primary);
   color: var(--color-primary);
-  background-color: #f0f4f7;
+  background-color: rgba(117, 142, 183, 0.08);
 }
 
 .post-list-item p {
@@ -352,7 +361,7 @@ a:focus {
   position: relative;
   display: flex;
   align-items: center;
-  border: 1px solid black;
+  border: 1px solid var(--color-primary);
   border-radius: 6px;
   padding: 2px;
   background: white;
