--- a/src/style.css
+++ b/src/style.css
@@ -27,11 +27,10 @@
   --spacing-20: 5rem;
   --spacing-24: 6rem;
   --spacing-32: 8rem;
-  --fontFamily-sans: Montserrat, system-ui, -apple-system, BlinkMacSystemFont,
-    'Segoe UI', Roboto, 'Helvetica Neue', Arial, 'Noto Sans', sans-serif,
-    'Apple Color Emoji', 'Segoe UI Emoji', 'Segoe UI Symbol', 'Noto Color Emoji';
-  --fontFamily-serif: 'Merriweather', 'Georgia', Cambria, 'Times New Roman',
-    Times, serif;
+  --fontFamily-serif: 'Times New Roman', Times, serif;
+  --fontFamily-sans: 'Courier New', Courier, monospace;
+  /* --fontFamily-serif: 'Merriweather', 'Georgia', Cambria, 'Times New Roman',
+    Times, serif; */
   --font-body: var(--fontFamily-serif);
   --font-heading: var(--fontFamily-sans);
   --fontWeight-normal: 400;
@@ -56,11 +55,15 @@
   --fontSize-7: 2.986rem;
   --color-primary: #6f5f90;
   --color-secondary: #758eb7;
-  --color-text: #2e353f;
+  --color-text: black;
   --color-text-light: #4d525c;
   --color-heading: #2b2f35;
   --color-heading-black: #5f517b;
   --color-accent: #d1dce5;
+  --color-background: #c0c0c0;
+  --color-black: black;
+  --color-blue: #2046f5;
+  --color-gray: #868686;
 }
 
 /* HTML elements */
@@ -82,15 +85,12 @@ body {
   font-family: var(--font-body);
   font-size: var(--fontSize-1);
   color: var(--color-text);
+  background-color: var(--color-background);
 }
 
 footer {
   padding: var(--spacing-6) var(--spacing-0);
   font-size: var(--fontSize-0);
-}
-
-footer a {
-  text-decoration: none;
 }
 
 hr {
@@ -126,7 +126,7 @@ h6 {
 h1 {
   font-weight: var(--fontWeight-black);
   font-size: var(--fontSize-6);
-  color: var(--color-heading-black);
+  color: var(--color-black);
 }
 
 h2 {
@@ -149,16 +149,11 @@ h6 {
   font-size: var(--fontSize-1);
 }
 
-h1 > a {
-  text-decoration: none;
-}
-
 h2 > a,
 h3 > a,
 h4 > a,
 h5 > a,
 h6 > a {
-  text-decoration: none;
   color: inherit;
 }
 
@@ -233,23 +228,13 @@ table thead tr th {
 }
 
 button {
-  background-image: linear-gradient(
-    to bottom right,
-    var(--color-primary),
-    var(--color-secondary)
-  );
-  color: white;
+  color: var(--color-black);
 }
 
 /* Link */
 
 a {
-  color: var(--color-primary);
-}
-
-a:hover,
-a:focus {
-  text-decoration: none;
+  color: var(--color-blue);
 }
 
 /* Custom classes */
@@ -278,22 +263,16 @@ a:focus {
   padding: 20px 0 10px;
 }
 
-.post-link {
-  text-decoration: none;
-}
-
 .post-list-item {
-  border: 1px solid transparent;
-  border-radius: 10px;
+  border: 4px solid var(--color-gray);
+  border-top: 2px solid white;
+  border-left: 2px solid white;
+  color: var(--color-blue);
   padding: var(--spacing-4);
-  color: var(--color-text-light);
-  transition: all 0.25s ease;
 }
 
 .post-list-item:hover {
-  border: 1px solid var(--color-primary);
-  color: var(--color-primary);
-  background-color: rgba(117, 142, 183, 0.08);
+  background-color: #bbb;
 }
 
 .post-list-item p {
@@ -318,7 +297,6 @@ a:focus {
 .header-link-home {
   font-weight: var(--fontWeight-bold);
   font-family: var(--font-heading);
-  text-decoration: none;
   font-size: var(--fontSize-2);
 }
 
@@ -335,7 +313,6 @@ a:focus {
   margin-right: var(--spacing-4);
   margin-bottom: var(--spacing-0);
   min-width: 50px;
-  border-radius: 100%;
 }
 
 .blog-post header h1 {
@@ -361,18 +338,17 @@ a:focus {
   position: relative;
   display: flex;
   align-items: center;
-  border: 1px solid var(--color-primary);
-  border-radius: 6px;
-  padding: 2px;
+  border: 2px solid rgb(218, 218, 218);
+  border-top: 2px solid var(--color-black);
+  border-left: 2px solid var(--color-black);
   background: white;
 }
 
 .search-box:focus-within {
-  outline: -webkit-focus-ring-color auto 1px;
+  outline: none;
 }
 
 .search-box input {
-  padding: 6px;
   border: 0;
   outline: none;
   width: calc(100% - 60px);
