--- a/src/style.css
+++ b/src/style.css
@@ -179,6 +179,7 @@ ol {
   padding: var(--spacing-0);
   margin-bottom: var(--spacing-8);
   list-style-image: none;
+  list-style-position: inside;
 }
 
 ul li,
